WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239926
[GStreamer] Mediastream mock audio interruption fixes after
r290985
https://bugs.webkit.org/show_bug.cgi?id=239926
Summary
[GStreamer] Mediastream mock audio interruption fixes after r290985
Philippe Normand
Reported
2022-04-30 04:54:02 PDT
Patch from
Bug 237524
broke 3 mediastream tests in WPE/GTK. fast/mediastream/media-stream-video-track-interrupted-from-audio.html [ Failure ] fast/mediastream/media-stream-track-interrupted.html [ Failure ] fast/mediastream/track-ended-while-muted.html [ Failure ]
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-04-30 05:03:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/445
EWS
Comment 2
2022-05-04 03:44:14 PDT
Committed
r293771
(
250250@main
): <
https://commits.webkit.org/250250@main
> Reviewed commits have been landed. Closing PR #445 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-04 03:45:13 PDT
<
rdar://problem/92723545
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug