[GStreamer] Mediastream mock audio interruption fixes after r290985 https://bugs.webkit.org/show_bug.cgi?id=239926

Patch by Philippe Normand <pnormand@igalia.com> on 2022-05-04
Reviewed by Chris Dumez.

Similarly to mock video sources, the GStreamer mock audio sources are now cached in a
hashset, which is used to dispatch interruption requests.

* platform/mediastream/gstreamer/GStreamerAudioCaptureSource.cpp:
(WebCore::GStreamerAudioCaptureSource::interrupted const): Avoid runtime critical GObject
warnings that would happen if this method is called before the pipeline has been created.
* platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp: Cache mock sources in a hashset.
(WebCore::MockRealtimeAudioSourceGStreamer::~MockRealtimeAudioSourceGStreamer):
* platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.h:
* platform/mock/MockRealtimeAudioSource.cpp: Dispatch interruption requests to currently
cached GStreamer mock audio sources.
(WebCore::MockRealtimeAudioSource::setIsInterrupted):
* platform/mock/MockRealtimeVideoSource.cpp: Switch to MainThreadNeverDestroyed<T> for caching sources.
(WebCore::MockRealtimeVideoSource::MockRealtimeVideoSource):
(WebCore::MockRealtimeVideoSource::~MockRealtimeVideoSource):

LayoutTests:

* platform/glib/TestExpectations: Unflag mediastream tests now passing.

Canonical link: https://commits.webkit.org/250250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293771 268f45cc-cd09-0410-ab3c-d52691b4dbfc